; ModuleID = '/home/carl/AnghaBench/postgres/contrib/dblink/extr_dblink.c_restoreLocalGucs.c'
source_filename = "/home/carl/AnghaBench/postgres/contrib/dblink/extr_dblink.c_restoreLocalGucs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @restoreLocalGucs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @restoreLocalGucs(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = icmp sgt i32 %3, 0
  br i1 %4, label %5, label %8

5:                                                ; preds = %1
  %6 = load i32, i32* %2, align 4
  %7 = call i32 @AtEOXact_GUC(i32 1, i32 %6)
  br label %8

8:                                                ; preds = %5, %1
  ret void
}

declare dso_local i32 @AtEOXact_GUC(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
